--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>爪 - 页面时光机</title>
-  <link rel="stylesheet" href="index.css" />
+  <link rel="stylesheet" href="index.css"/>
+  <style type="text/css">
+  #root {
+  	height: 100%;
+   	background: #ECECEC;
+  }
+  a{
+    color:rgb(233, 37, 158)
+  }
+  </style>
 </head>
 <body>
 
