--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>爪 - 页面时光机</title>
   <link rel="stylesheet" href="index.css"/>
+  <script src="//cdn.bootcss.com/underscore.js/1.8.3/underscore-min.js"></script>
   <style type="text/css">
   #root {
   	height: 100%;
