--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <title>爪 - 页面时光机</title>
   <link rel="stylesheet" href="index.css"/>
   <script src="//cdn.bootcss.com/underscore.js/1.8.3/underscore-min.js"></script>
+  <script src="//cdn.bootcss.com/moment.js/2.17.1/moment.min.js"></script>
   <style type="text/css">
   #root {
   	height: 100%;
