--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,11 @@
   <script src="//cdn.bootcss.com/underscore.js/1.8.3/underscore-min.js"></script>
   <script src="//cdn.bootcss.com/moment.js/2.17.1/moment.min.js"></script>
   <style type="text/css">
+  body{
+    background: #ECECEC;
+  }
   #root {
-  	height: 100%;
+    height: 100%;
    	background: #ECECEC;
   }
   a{
