--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <title>爪 - 页面时光机</title>
   <link rel="stylesheet" href="index.css"/>
   <link rel="shortcut icon" href="/assets/img/favicon.ico"> 
+  <link href="//cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
   <script src="//cdn.bootcss.com/underscore.js/1.8.3/underscore-min.js"></script>
   <script src="//cdn.bootcss.com/moment.js/2.17.1/moment.min.js"></script>
   <style type="text/css">
