--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,9 @@
   a{
     color:rgb(233, 37, 158)
   }
+  .ant-carousel .slick-slide img {
+    border: 4px solid #FAFAFA;
+  }
   </style>
 </head>
 <body>
