--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,7 @@
   <link rel="stylesheet" href="index.css"/>
   <link rel="shortcut icon" href="/assets/img/favicon.ico"> 
   <link href="//cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
-  <script src="//cdn.bootcss.com/underscore.js/1.8.3/underscore-min.js"></script>
-  <script src="//cdn.bootcss.com/moment.js/2.17.1/moment.min.js"></script>
+  <link rel="stylesheet" href="//cdn.bootcss.com/antd/2.9.1/antd.min.css">
   <style type="text/css">
   body{
     background: #ECECEC;
@@ -28,7 +27,17 @@
 <body>
 
 <div id="root"></div>
-
+<script src="https://a.alipayobjects.com/g/datavis/g2/2.2.7/g2.js"></script>
+<script src="//cdn.bootcss.com/script.js/2.5.8/script.min.js"></script>
+<script src="//cdn.bootcss.com/moment.js/2.18.1/moment.min.js"></script>
+<script src="//cdn.bootcss.com/react/15.5.4/react.min.js"></script>
+<script src="//cdn.bootcss.com/react/15.5.4/react-dom.min.js"></script>
+<script src="//cdn.bootcss.com/react-router/2.8.1/ReactRouter.min.js"></script>
+<script src="//cdn.bootcss.com/react-router-redux/4.0.5/ReactRouterRedux.min.js"></script>
+<script src="//cdn.bootcss.com/redux/3.6.0/redux.min.js"></script>
+<script src="//cdn.bootcss.com/react-redux/5.0.4/react-redux.min.js"></script>
+<script src="//cdn.bootcss.com/underscore.js/1.8.3/underscore-min.js"></script>
+<script src="//cdn.bootcss.com/antd/2.9.1/antd.min.js"></script>
 <script src="index.js"></script>
 
 </body>
