--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="pragma" content="no-cache">  
+  <meta http-equiv="cache-control" content="no-cache">  
+  <meta http-equiv="expires" content="0">  
+  <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE9" />  
   <title>爪 - 页面时光机</title>
   <link rel="stylesheet" href="index.css"/>
   <link rel="shortcut icon" href="/assets/img/favicon.ico"> 
