--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE9" />  
   <title>爪 - 页面时光机</title>
   <link rel="stylesheet" href="index.css"/>
-  <link rel="shortcut icon" href="/assets/img/favicon.ico"> 
+  <link rel="icon" href="/assets/img/favicon.ico" type="image/x-icon"/> 
+  <link rel="shortcut icon" href="/assets/img/favicon.ico" type="image/x-icon"/> 
+  <link rel="apple-touch-icon-precomposed" sizes="180x180" href="/assets/img/icon.png" />
   <link href="//cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
   <link rel="stylesheet" href="//cdn.bootcss.com/antd/2.9.1/antd.min.css">
   <style type="text/css">
